--- a/CEby_Website/CEby_Website.csproj
+++ b/CEby_Website/CEby_Website.csproj
@@ -275,14 +275,19 @@
     <Compile Include="Data\minicstructorContext.cs" />
     <Compile Include="Data\User.cs" />
     <Compile Include="Data\UserClass.cs" />
+    <Compile Include="EnrollClassRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ClassModel.cs" />
     <Compile Include="Models\ClassViewModel.cs" />
+    <Compile Include="Models\EnrollClassModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UserRepository.cs" />
@@ -344,6 +349,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Classes.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\EnrollAClass.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
