--- a/CEby_Website/CEby_Website.csproj
+++ b/CEby_Website/CEby_Website.csproj
@@ -284,6 +284,7 @@
     <Compile Include="Models\ClassViewModel.cs" />
     <Compile Include="Models\EnrollClassModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\IndexModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\RegisterModel.cs" />
@@ -348,10 +349,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Home\Classes.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Classes.cshtml" />
     <Content Include="Views\Home\EnrollAClass.cshtml" />
+    <Content Include="Views\Home\GetEnrolledClasses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
