--- a/CEby_Website/CEby_Website.csproj
+++ b/CEby_Website/CEby_Website.csproj
@@ -352,8 +352,8 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
     <Content Include="Views\Home\Classes.cshtml" />
-    <Content Include="Views\Home\EnrollAClass.cshtml" />
     <Content Include="Views\Home\GetEnrolledClasses.cshtml" />
+    <Content Include="Views\Home\EnrollInClass.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
